--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=servicio-usuarios
-server.port=${PORT:0}
+server.port=8002
+spring.datasource.url=jdbc:mysql://localhost:3306/user_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto= create
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate.SQL=debug
+
+
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-logging.level.org.hibernate.SQL=debug
 
 spring.sleuth.sampler.probability=1.0
