--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8002
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=debug
