--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=servicio-usuarios
+spring.application.name=service-users
 server.port=8002
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db?useSSL=false
 spring.datasource.username=root
