--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,9 @@
 spring.application.name=service-users
-server.port=8002
-spring.datasource.url=jdbc:mysql://localhost:3306/user_db?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto= create-drop
-spring.jpa.show-sql=true
 
-logging.level.org.hibernate.SQL=debug
-
-
-
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+server.port=1913
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-
 spring.sleuth.sampler.probability=1.0
+
+spring.config.import=optional:configserver:
